<resources>
    <string-array name="capitais">
        <item>Salvador</item>
        <item>João Pessoa</item>
        <item>Maceió</item>
        <item>Goiânia</item>
        <item>Belo Horizonte</item>
        <item>Recife</item>
        <item>Porto Velho</item>
        <item>Boa Vista</item>
        <item>Florianópolis</item>
        <item>São Paulo</item>
        <item>Aracaju</item>
        <item>Rio Branco</item>
        <item>Macapá</item>
        <item>Manaus</item>
        <item>Fortaleza</item>
        <item>Vitória</item>
        <item>São Luís</item>
        <item>Cuiabá</item>
        <item>Campo Grande</item>
        <item>Belém</item>
        <item>Curitiba</item>
        <item>Teresina</item>
        <item>Rio de Janeiro</item>
        <item>Natal</item>
        <item>Porto Alegre</item>
        <item>Palmas</item>
        <item>Brasília</item>
    </string-array>
    <string-array name="estados">
        <item>Bahia</item>
        <item>Paraíba</item>
        <item>Alagoas</item>
        <item>Goiás</item>
        <item>Minas Gerais</item>
        <item>Pernambuco</item>
        <item>Rondônia</item>
        <item>Roraima</item>
        <item>Santa Catarina</item>
        <item>São Paulo</item>
        <item>Sergipe</item>
        <item>Acre</item>
        <item>Amapá</item>
        <item>Amazonas</item>
        <item>Ceará</item>
        <item>Espírito Santo</item>
        <item>Maranhão</item>
        <item>Mato Grosso</item>
        <item>Mato Grosso do Sul</item>
        <item>Pará</item>
        <item>Paraná</item>
        <item>Piauí</item>
        <item>Rio de Janeiro</item>
        <item>Rio Grande do Norte</item>
        <item>Rio Grande do Sul</item>
        <item>Tocantins</item>
        <item>Distrito Federal</item>
    </string-array>
    <string name="fechar">Fechar</string>

    <string name="app_title2">App das disciplinas</string>
    <string-array name="disciplinas">
        <item>Internet das Coisas</item>
        <item>Experiência do Usuário</item>
        <item>Programação para Dispositivos Móveis</item>
        <item>Inglês</item>
        <item>Integração e Entrega Contínua</item>
        <item>Laboratório de Desenvolvimento Web</item>
        <item>Estatística Aplicada</item>
    </string-array>
    <string-array name="nomes">
        <item>Fernanda Pereira</item>
        <item>Eduardo Tadeu</item>
        <item>Mario da silva</item>
        <item>Leandro Ferro</item>
        <item>Silvio Fernando</item>
        <item>Junio César</item>
        <item>André Benito</item>
    </string-array>
    <string name="img_desc2">Imagem do item selecionado</string>
    <string-array name="descricoes">
        <item>Introdução à arquitetura e conceitos de IoT, desenvolvimento com Arduino e simuladores.</item>
        <item>Estudo da Experiência do Usuário e do Consumidor, com foco no perfil do usuário e conceitos fundamentais de UX.</item>
        <item>Introdução ao desenvolvimento para dispositivos móveis, abordando tipos de dispositivos, sistemas operacionais e arquitetura Android.</item>
        <item>Estudo do inglês com foco em bases tecnológicas, vocabulário e Simple Past.</item>
        <item>Conceitos de Integração e Entrega Contínuas, histórico, pré-requisitos e configuração de ambiente de produção.</item>
        <item>Introdução ao desenvolvimento web, princípios SOLID e boas práticas de desenvolvimento de sistemas.</item>
        <item>Introdução à estatística com tabelas de frequência, conjuntos, diagramas de Venn e operações entre conjuntos.</item>
    </string-array>
    <string name="fechar2">Fechar</string>

    <!-- Novo App -->

    <string name="app_titulo3"> App de Geometria </string>

    <!-- Figuras -->

    <string name="circulo"> Círculo </string>
    <string name="retangulo"> Retângulo </string>
    <string name="triangulo"> Triângulo </string>

    <!-- Valores -->

    <string name="raio"> Raio </string>
    <string name="base"> Base </string>
    <string name="altura"> Altura </string>

    <!-- Botão -->

    <string name="btn_calcular"> Calcular </string>

    <!-- Placeholder -->

    <string name="item_placeholder"> Item aparecerá aqui </string>
    <string name="total_placeholder"> Total aparecerá aqui </string>

    <!-- Fechar -->

    <string name="fechar3"> Fechar </string>

    <!-- Novo App -->

    <string name="lei_de_ohm">Lei de Ohm</string>

    <string name="tensao">Tensão (V)</string>
    <string name="corrente">Corrente (I)</string>
    <string name="resistencia">Resistência (R)</string>

    <string name="campo_tensao">Tensão (V)</string>
    <string name="campo_corrente">Corrente (A)</string>
    <string name="campo_resistencia">Resistência (R)</string>

    <string name="btn_calcular_ohm">Calcular</string>

    <string name="resultado_tensao">Tensão: %.2f V</string>
    <string name="resultado_corrente">Corrente: %.2f A</string>
    <string name="resultado_resistencia">Resistência: %.2f Ω</string>

    <string name="erro_campos">Preencha todos os campos!</string>

    <!-- Novo App -->

    <string name="confeitaria">Confeitaria</string>

    <string-array name="produtos">
        <item>Bolo de chocolate</item>
        <item>Bolo de cenoura</item>
        <item>Bolo de morango</item>
    </string-array>

    <string name="quantidade">Quantidade</string>

    <string name="resultado_placeholder"> Resultado aparecerá aqui! </string>

    <string name="resultado"> Resultado: %1$.4f</string>


</resources>